# HangulClock

./: .gitignore  .gitmodules  README.md  README_en.md
2dcad/: base_guide.dxf
arduino/HangulClock/: .gitignore  HangulClock.ino  HangulClock.pde  LICENSE  SConstruct  build.sh  upload.sh
board/: mainboard.brd  mainboard.sch  matrix5x5.brd  matrix5x5.sch  matrixDriver.sch
case/: hangulclock_case.scad  hangulclock_case.stl  hangulclock_case_back.scad  hangulclock_case_back.stl  hangulclock_light_pannel.scad  hangulclock_light_pannel.stl  hangulclock_light_tunnel.scad  hangulclock_light_tunnel.stl  spring.scad
gerber/: LICENSE  rusty-hangulclock-B_Cu.gbr  rusty-hangulclock-B_Mask.gbr  rusty-hangulclock-B_Paste.gbr  rusty-hangulclock-B_Silkscreen.gbr  rusty-hangulclock-Edge_Cuts.gbr  rusty-hangulclock-F_Cu.gbr  rusty-hangulclock-F_Mask.gbr  rusty-hangulclock-F_Paste.gbr  rusty-hangulclock-F_Silkscreen.gbr  rusty-hangulclock-NPTH.drl  rusty-hangulclock-PTH.drl  rusty-hangulclock-job.gbrjob
go_hangulclock/: LICENSE  deploy.sh  go.mod  go.sum  hangulclock.service
panel/: main.go  make_panel.py
rhino/: ._HG_clock_FRT_v10X1.stl  ._HG_clock_body_v10X1 - 20150831 0.3mm 격자 1.4mm.STL  ._HG_clock_stand_v1 - 20150910 -0.3mm.STL  HG_clock_FRT_v10X1.stl  HG_clock_body_v10X1 - 20150831 0.3mm 격자 1.4mm.STL  HG_clock_stand_v1 - 20150910 -0.3mm.STL
rusty_hangulclock/: Cargo.toml  LICENSE  Makefile  README.md  part.csv
rusty_hangulclock/.cargo/: config.toml
rusty_hangulclock/.devcontainer/: devcontainer.json
rusty_hangulclock/docs/: README.md
rusty_hangulclock/scripts/: flash.sh
rusty_hangulclock/src/: global.rs  main.rs  menu.rs  net.rs  nvs.rs  panel.rs  panel_ws2812.rs  rotary.rs
rusty_hangulclock/src/panel/: dotstar.rs  neopixel.rs
sbc_hangulclock/: LICENSE  display.go  go.mod  go.sum  main.go
sch/rusty-hangulclock/: fp-info-cache  rusty-hangulclock.kicad_pcb  rusty-hangulclock.kicad_prl  rusty-hangulclock.kicad_pro  rusty-hangulclock.kicad_sch
sketch/strandtest/: strandtest.ino
tools/: FONT_LICENSE  make_panel.py  set_current_time.py
(+8 files in other folders)
