[package]
name = "rusty-hangulclock"
version = "0.1.0"
authors = ["Homin Lee <ff4500@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rusty-hangulclock"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49.1" }
chrono = "0.4.39"
sh1106 = "0.5.0"
embedded-graphics = "0.8.1"
anyhow = "1.0.94"
embedded-svc = "0.28.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
